--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,6 +2,7 @@
   height: 60%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+ 
   .second {
     display: flex;
     flex-direction: column;
@@ -19,7 +20,20 @@
         width: 500px;
         margin-right: 10px;
         .articles{
-          margin-left: 2rem !important;
+          text-align: center;
+          .links{
+            display: flex;
+            justify-content: space-around;
+          }
+          a{
+            color: inherit;
+            text-decoration: none;
+            cursor: pointer;
+            transition: 300ms;
+            &:hover{
+              color:blue
+            }
+          }
         }
         
       }
@@ -84,7 +98,7 @@
   }
 }
 
-@media (max-width: 7890px) {
+@media (max-width: 786px) {
   .container {
 display: flex;
 
