--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -29,7 +29,7 @@
           text-align: center;
           .links{
             display: flex;
-            justify-content: space-around;
+            justify-content: space-around !important;
           }
           a{
             color: inherit;
@@ -102,9 +102,7 @@
 @media (max-width: 786px) {
   .container {
 display: flex;
-.text-zone{
 
-}
     .second {
       
       transform: scale(.7) translateX(-10%) !important;
@@ -119,6 +117,8 @@ display: flex;
         display: grid;
         grid-template-columns: 1fr;
         justify-self: center;
+        place-content: center;
+        text-align: center;
         margin-bottom: 1rem;
 
         .cards{
@@ -126,11 +126,17 @@ display: flex;
           flex-direction: column;
           justify-items: center;
           align-items: center;
-        
+          .articles{
+            text-align: center;
+            .links{
+              display: flex;
+             gap: 2em;
+            }}
         .project {
           position: relative;
           width: 400px;
           margin-left: 100px;
+          
         }
         }
       }
